--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--Link css-->
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/mediaqueries.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -80,12 +81,12 @@
         <div class="section-container">
             <div class="about-details-container">
                 <div class="about-containers">
-                    <div class="details-container">
+                    <div class="details-container" data-aos="fade-down-right">
                         <img src="./assets/experience.png" alt="Experience icon" class="icon" />
                         <h3>Experience</h3>
                         <p>Pengalaman saya di bidang Frontend tetapi masi belajar</p>
                     </div>
-                    <div class="details-container">
+                    <div class="details-container" data-aos="fade-down-left">
                         <img src="./assets/education.png" alt="Education icon" class="icon" />
                         <h3>Education</h3>
                         <p>Masih sebagai siswa SMKN 13 BANDUNG dengan jurusan RPL(Rekayasa Perangkat Lunak)</p>
@@ -109,7 +110,7 @@
         <h1 class="title">Experience</h1>
         <div class="experience-details-container">
             <div class="about-containers">
-                <div class="details-container">
+                 <div class="details-container"data-aos="fade-down-right">
                     <h2 class="experience-sub-title">Frontend Development</h2>
                     <div class="article-container">
                         <article>
@@ -149,7 +150,7 @@
                         </article>
                     </div>
                 </div>
-                <div class="details-container">
+               <div class="details-container" data-aos="fade-down-left">
                     <h2 class="experience-sub-title">Backend Development</h2>
                     <div class="article-container">
                         <article>
@@ -213,7 +214,7 @@
     <section id="projects">
         <p class="section__text__p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
-        <div class="experience-details-container">
+       <div class="experience-details-container" data-aos="fade-up">
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
@@ -260,6 +261,10 @@
         <p>Copyright &#169; 2023 Our Portofolio. All Rights Reserved.</p>
     </footer>
     <script src="./js/script.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
